--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,18 +37,21 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\IDamageable.cs" />
+     <Compile Include="Assets\Scripts\Field of view\Controller.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\LivingEntity.cs" />
      <Compile Include="Assets\Scripts\Spawner.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\Projectile.cs" />
+     <Compile Include="Assets\Scripts\Field of view\FieldOfView.cs" />
      <Compile Include="Assets\Scripts\MapGenerator.cs" />
      <Compile Include="Assets\Scripts\Gun.cs" />
      <Compile Include="Assets\Scripts\Utility.cs" />
      <Compile Include="Assets\Scripts\GunController.cs" />
-     <Compile Include="Assets\Scripts\Field of view\FieldOfView.cs" />
-     <Compile Include="Assets\Scripts\Field of view\Controller.cs" />
+     <Compile Include="Assets\NULLcode Studio\MouseNavi\Scripts\MouseNavi.cs" />
+     <Compile Include="Assets\NULLcode Studio\MouseNavi\Scripts\NaviControl.cs" />
+     <None Include="Assets\NULLcode Studio\MouseNavi\NULLcode Studio.txt" />
      <None Include="Assets\Shaders\Stencil Object.shader" />
      <None Include="Assets\Shaders\Stencil Mask.shader" />
     <Reference Include="UnityEngine">
